# peach

./: .env  .gitignore  Hey-peach_en_mac_v3_0_0.ppn  app.py  pyproject.toml
api/: README.md  api.py  package-lock.json  package.json  pyproject.toml
api/src/: api.py  asr.py  audio.py  common.py  config.py  core.py  main.py  transcriber.py  tts.py  utils.py
cli/: .env.template  .gitignore  Hey-peach_en_raspberry-pi_v3_0_0.ppn  README.md  ai.py  app.py  pyproject.toml  utils.py
cli/constants/: model_config.py  tools_json.py
cli/functions/: generate_image.py  web_search.py
cli/src/: app.py  asr.py  audio.py  config.py  constants.py  core.py  custom_logger.py  db.py  scratch.py  setup.py  transcriber.py  utils.py
cli/src/realtime_whisper/: asr.py  audio.py  config.py  core.py  transcriber.py
friend/: README.md  friend_fasterwhisper.py  friend_whisperx.py
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.css  index.tsx  style.scss
hardware/Peach/: Peach.kicad_prl  Peach.kicad_pro
site/: index.html  package-lock.json  package.json  tailwind.config.js
site/src/: App.css  App.tsx  Banner.tsx  Header.tsx  Hero.tsx  MainContent.tsx  Preorder.tsx  PreorderBtn.tsx  index.css
site/src/icons/: Back.tsx
site/supabase/: config.toml  types.ts
web/: bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
web/src/: App.tsx  AudioViz.tsx  NewApp.tsx  Root.tsx  constants.ts  index.css  main.tsx
web/src/components/analyzers/: audioAnalyzer.tsx  fftAnalyzerControls.tsx
web/src/components/controls/: main.tsx  visualsDock.tsx
web/src/components/visualizers/: visualizerAudio.tsx
web/src/context/: audioSource.tsx  cameraControls.tsx  visual.tsx
web/src/context/visualConfig/: cube.tsx  sphere.tsx
web/src/lib/: palettes.ts
web/src/pages/generate_image/: index.tsx
web/src/pages/processing/: index.tsx
web/src/pages/recording/: index.tsx
web/src/pages/weather/: index.tsx
web/src/pages/wouldyourather/: index.tsx
web/src/style/: globals.css
web/supabase/: types.ts
web2/: index.html
web2/scripts/: audioLoader.js  main.js  spiral.js
web3/: .env.template  .gitignore  biome.json  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js
web3/public/: peach.glb  table.glb
web3/src/: App.tsx  constants.ts  index.css  vite-env.d.ts
web3/src/components/: ButtonGroup.tsx  Loader.tsx  PreOrderBtn.tsx
web3/src/contexts/: ScreenContentCtx.tsx
web3/src/models/: Apartment.tsx  CameraController.tsx  LoadingManager.tsx  ModelsWrapper.tsx  Peach.tsx  Scene.tsx  SceneContainer.tsx  Screen.tsx  constants.ts
web3/src/recorder/: Recorder.tsx  RecordingState.ts  UIStates.ts  audioWorklet.ts  constants.ts
web3/src/sections/footer/: FooterSection.tsx
web3/src/sections/hero/: HeroSection.tsx
web3/src/sections/section2/: BentoGridItem.tsx  Section2.tsx
web4/: biome.json  bun.lockb  index.html  package.json  tsconfig.app.json
web4/src/: App.tsx  main.tsx
webCircle/: .gitignore  index.html  package-lock.json  pnpm-lock.yaml
webCircle/src/: App.tsx  main.tsx  types.ts
webCircle/src/context/: audioSource.tsx  fftAnalyzer.tsx  mode.tsx
webCircle/src/lib/: appState.ts
(+21 files in other folders)
