[tool.poetry]
name = "peach-cli"
version = "0.1.0"
description = ""
authors = ["Sami Junior <sami.juniorco@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
sounddevice = "^0.4.7"
soundfile = "^0.12.1"
pvporcupine = "^3.0.2"
python-dotenv = "^1.0.1"
pvrecorder = "^1.2.2"
colorlog = "^6.8.2"
setuptools = "^70.1.1"
halo = "^0.0.31"
supabase = "^2.6.0"
faster-whisper = "^1.0.3"
webrtcvad = "^2.0.10"
aiodebug = "^2.3.0"
pyaudio = "^0.2.14"
scipy = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
